# IntelliCPP

./: .clangd  .eslintrc.js  .gitignore  .replit  CMakeLists.txt  CONTRIBUTING.md  README.md  check_status.sh  main.js  package-lock.json  package.json  preload.js  replit.md  setup.bat  setup.sh  start.sh  stop.sh  test_app.js  test_backend.cpp  test_encoding_fix.cpp  test_error_formatting.cpp  test_load_native.js  test_vector  test_vector_fix.cpp  vector_test_example.cpp  vercel.json
.github/workflows/: ci.yml
api/: getStats.js  getSuggestions.js  health.js  runCode.js  test.js
api/internal/: api-handler.js
attached_assets/: Pasted--SAFE-UI-UPGRADE-MODE-DO-NOT-MODIFY-CORE-ENGINE-You-are_1771905234705.txt
backend/: .clangd  CMakeCache.txt  CMakeLists.txt  Makefile  binding.gyp  cmake_install.cmake  http-server.js  package-lock.json  package.json
backend/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
backend/include/: code_runner.h  suggestion_engine.h  tokenizer.h  trie.h
backend/src/: binding.cpp  code_runner.cpp  suggestion_engine.cpp  tokenizer.cpp  trie.cpp
cloud-backend/: package-lock.json  package.json  server.js
data/: cpp_keywords.txt  stl_functions.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/public/monaco-themes/: codeflow-dark-pro.json
frontend/src/: App.jsx  index.jsx
frontend/src/components/: OutputPanel.css  OutputPanel.jsx  Sidebar.jsx  StatusBar.jsx  SuggestionPopup.jsx  ThemeToggle.jsx
frontend/src/styles/: glassmorphism.css
frontend/src/theme/: ThemeContext.jsx  themes.js
frontend/src/utils/: errorFormatter.js
pages/api/: test.js
tests/: CMakeCache.txt  CMakeLists.txt  test_tokenizer.cpp  test_trie.cpp
